--- a/cit_3f/cit_3f_real_for_costmap.yaml
+++ b/cit_3f/cit_3f_real_for_costmap.yaml
@@ -1,4 +1,4 @@
-image: /home/haru/map/1007a.pgm
+image: cit_3f_real.pgm
 resolution: 0.050000
 origin: [-100.000000, -100.000000, 0.000000]
 negate: 0
